--- a/overrides/main.html
+++ b/overrides/main.html
@@ -18,5 +18,5 @@
         async>
 </script>
 
-<h1>{% url 'some-url-name' v1 v2 %}</h1>
+<h1>{% url 'app-views-client' client.id %}</h1>
 {% endblock %}
