--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  {{ super() }}
+{{ super() }}
 <script src="https://giscus.app/client.js"
         data-repo="GudupaoSpark/code-fix"
         data-repo-id="R_kgDOM6M1cQ"
@@ -10,7 +10,7 @@
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
-        data-input-position="bottom"
+        data-input-position="top"
         data-theme="preferred_color_scheme"
         data-lang="zh-CN"
         crossorigin="anonymous"
