--- a/overrides/main.html
+++ b/overrides/main.html
@@ -16,5 +16,5 @@
         crossorigin="anonymous"
         async>
 </script>
-<h1>{{ page.url }}</h1>
+<a href="https://github.com/GudupaoSpark/code-fix/blob/main{{ page.url }}">在 GitHub 上编辑</a>
 {% endblock %}
