--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<a href="https://github.com/GudupaoSpark/code-fix/blob/main/docs/{{ "index" if page.url.strip("/")=="" else page.url.strip("/") }}.md"><img alt="Static Badge" src="https://img.shields.io/badge/Github-Edit-blue?style=for-the-badge&logo=github&color=%23334191"></a>
+<a href="https://github.com/GudupaoSpark/code-fix/blob/main/docs/{{ "index" if page.url.strip("/")=="" else page.url.strip("/") }}.md"><img alt="Static Badge" src="https://img.shields.io/badge/Edit-blue?style=for-the-badge&logo=github&color=%23334191"></a>
 {{ super() }}
 <script src="https://giscus.app/client.js"
         data-repo="GudupaoSpark/code-fix"
